# huggingface-uv-cursor

./: .gitignore  README.md  accelerate_config.yaml  pyproject.toml  setup.sh
src/: demo.py  gradio_demo.py  training_example.py
